<resources>
    <string name="app_name">RunningTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_get_started">Get Started</string>
    <string name="desc_ob_one">Track your run within an app!</string>
    <string name="title_ob_one">RunningTracker</string>
    <string name="title_ob_two">Accurate Location</string>
    <string name="desc_ob_two">View your run location with accurate location!</string>
    <string name="title_ob_three">Run Analytics</string>
    <string name="desc_ob_three">See an analysis of your running activity with your running data!</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAfdY-_NFHL8W5qvl2ZmItIaT4SMzzbOmc</string>
    <string name="menu_run">Your Run</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_setting">Settings</string>
    <string name="tv_welcome">Hello!\nPlease set up your name and weight!</string>
    <string name="hint_name">Your Name</string>
    <string name="tv_weight_hint">Your Weight (kg)</string>
    <string name="tv_sort_by">Sort by:</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="tv_total_time">Total Time</string>
    <string name="tv_00_00_00">00:00:00</string>
    <string name="tv_total_calories_burned">Total Calories Burned</string>
    <string name="tv_0kcal">0kcal</string>
    <string name="tv_average_speed">Average Speed</string>
    <string name="tv_0km_h">0km/h</string>
    <string name="btn_apply_changes">Apply Changes</string>
    <string name="tv_00_00_00_00">00:00:00:00</string>
    <string name="btn_start">Start</string>
    <string name="finish_run">Finish Run</string>
    <string name="tv_let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="tv_rationale_permission">You need to accept this permission to user this app!</string>
    <string name="btn_stop">Stop</string>
</resources>