<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background"
    tools:context=".presentation.ui.home.fragments.statistic.StatisticFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistanceInfo"
        style="@style/TVDescText"
        android:text="@string/total_distance"
        app:layout_constraintBottom_toTopOf="@+id/tvAverageSpeedInfo"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalDistance"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistance"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistance"
        style="@style/TVTitleText"
        android:text="@string/_0km"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalDistanceInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTimeInfo"
        style="@style/TVDescText"
        android:text="@string/tv_total_time"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalCaloriesInfo"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalTime"
        app:layout_constraintStart_toStartOf="@+id/tvTotalTime"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTime"
        style="@style/TVTitleText"
        android:text="@string/tv_00_00_00"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalTimeInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalCaloriesInfo"
        style="@style/TVDescText"
        android:text="@string/tv_total_calories_burned"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalCalories"
        app:layout_constraintStart_toStartOf="@+id/tvTotalCalories"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalCalories"
        style="@style/TVTitleText"
        android:text="@string/tv_0kcal"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalCaloriesInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageSpeedInfo"
        style="@style/TVDescText"
        android:text="@string/tv_average_speed"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/tvAverageSpeed"
        app:layout_constraintStart_toStartOf="@+id/tvAverageSpeed"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageSpeed"
        style="@style/TVTitleText"
        android:text="@string/tv_0km_h"
        app:layout_constraintBottom_toTopOf="@+id/tvAverageSpeedInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7017784" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAverageSpeedInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>