<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background"
    tools:context=".presentation.ui.home.fragments.setting.SettingFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/CustomTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            style="@style/CustomEditText"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            style="@style/CustomEditText"
            android:hint="@string/tv_weight_hint"
            android:ems="10"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnApplyChanges"
        style="@style/ObMaterialButtonPrimary"
        android:layout_marginTop="16dp"
        android:text="@string/btn_apply_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>